@@ -1,0 +1,37 @@
+#!/bin/sh
+# Begin $rc_base/init.d/cyrus-sasl
+
+# Based on sysklogd script from LFS-3.1 and earlier.
+# Rewritten by Gerard Beekmans  - gerard@linuxfromscratch.org
+
+. /etc/sysconfig/rc
+. $rc_functions
+
+case "$1" in
+	start)
+		echo "Starting the Cyrus SASL Server..."
+		loadproc /usr/sbin/saslauthd -a [authmech]
+		;;
+
+	stop)
+		echo "Stopping the Cyrus SASL Server..."
+		killproc saslauthd
+		;;
+
+	restart)
+		$0 stop
+		sleep 1
+		$0 start
+		;;
+
+	status)
+		statusproc saslauthd
+		;;
+
+	*)
+		echo "Usage: $0 {start|stop|restart|status}"
+		exit 1
+		;;
+esac
+
+# End $rc_base/init.d/cyrus-sasl
