@@ -1,3 +1,6 @@
+2004-08-05 Randy McMurchy <randy@linuxfromscratch.org>
+	* Added cyrus-sasl (Cyrus SASL authdaemon) script 
+
 2004-08-03 DJ Lucas <dj@linuxfromscratch.org>
 	* Added MODE and DIRMODE variables to set 
 	  permissions of installed scripts and 
